--- a/more.html
+++ b/more.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -31,28 +31,18 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
-        <span>
-          <i class="fa-solid fa-magnifying-glass fa-lg"></i>
-        </span>
-        <span>
-          <i class="fa-solid fa-music fa-lg"></i>
-        </span>
+        <span> <i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+        <span><i class="fa-solid fa-music fa-lg"></i> </span>
         <span
           ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a
         ></span>
       </div>
     </header>
 
-    <a href="#" id="friends-display-link">
-      <i class="fa-solid fa-circle-info"></i>
-      Friends'Names Display
-      <i class="fa-solid fa-chevron-right fa-sm"></i>
-    </a>
-
-    <main class="friends-screen">
-      <div class="user-component">
+    <main class="main-screen">
+      <div class="user-component" style="margin-bottom: 20px">
         <div class="user-component__column">
           <img
             src="#"
@@ -60,34 +50,57 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">Inho</h4>
-            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            <h6 class="user-component__subtitle">
+              +82 010-4373-7558
+              <i
+                class="fa-solid fa-circle-exclamation"
+                style="color: #b11616"
+              ></i>
+            </h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+          <i class="fa-regular fa-message fa-2x"></i>
+        </div>
       </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel--header">
-          <span>Channel</span>
-          <i class="fa-solid fa-chevron-up fa-sm"></i>
+      <div class="find-icons">
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-calendar-check"></i><span>Calendar</span>
         </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="#"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fa-solid fa-chevron-right fa-sm"></i>
-            </div>
-          </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-bag-shopping"></i><span>Talk Drive</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-face-smile-wink"></i><span>Emotions</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-brush"></i><span>Themes</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-receipt"></i><span>Account</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-comments"></i><span>Openchat</span>
+        </div>
+      </div>
+      <div
+        style="
+          margin-top: 20px;
+          border-top: 1px solid rgba(0, 0, 0, 0.3);
+          padding-top: 10px;
+        "
+      >
+        Suggestions
+      </div>
+      <div class="find-icons">
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-calendar-check"></i><span>Calendar</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-bag-shopping"></i><span>Talk Drive</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-face-smile-wink"></i><span>Emotions</span>
         </div>
       </div>
     </main>
@@ -96,13 +109,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fa-solid fa-user fa-2x"></i
+            ><i class="fa-regular fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html"
             ><span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i>
+            <i class="fa-solid fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
