--- a/chats.html
+++ b/chats.html
@@ -46,7 +46,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="#"
+            src="img\image.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
