--- a/find.html
+++ b/find.html
@@ -78,7 +78,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="#" />
+              <img src="img\bts1.png" />
               <div class="open-post__heart-count">
                 <i class="fa-solid fa-heart fa-sm"></i>
                 <span>326</span>
@@ -98,7 +98,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="#" />
+              <img src="img\bts2.png" />
               <div class="open-post__heart-count">
                 <i class="fa-solid fa-heart fa-sm"></i>
                 <span>215</span>
