--- a/friends.html
+++ b/friends.html
@@ -55,7 +55,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="#"
+            src="img\image.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -73,7 +73,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="#"
+              src="img\image.png"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
