--- a/more.html
+++ b/more.html
@@ -45,7 +45,7 @@
       <div class="user-component" style="margin-bottom: 20px">
         <div class="user-component__column">
           <img
-            src="#"
+            src="img\image.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
